--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -3638,7 +3638,7 @@ you can use it but there could be issues with aligning columns of text</string>
          <property name="title">
           <string>Accessibility</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout">
+         <layout class="QGridLayout" name="gridLayout_groupBox_accessibility">
           <item row="0" column="0" colspan="2">
            <widget class="QCheckBox" name="checkBox_announceIncomingText">
             <property name="toolTip">
@@ -4016,6 +4016,16 @@ you can use it but there could be issues with aligning columns of text</string>
             </property>
            </widget>
           </item>
+          <item row="4" column="1">
+           <widget class="QCheckBox" name="checkBox_translateSpeedWalkDirTable">
+            <property name="toolTip">
+             <string extracomment="The fragments of text inside tt tags represent identifiers or fixed texts in the Lua sub-system and are not to be translated, they also should be left inside those tags.">&lt;p&gt;Some previous versions of Mudlet were set to translate the exit abbreviations used for normal exits in the &lt;tt&gt;speedWalkDir&lt;/tt&gt; table into the user's GUI language. This meant that the function &lt;tt&gt;doSpeedWalk()&lt;/tt&gt; in a mapper or other package may have to retranslate them into the language the Game server uses should it be different and be able to do so for any language the user could had set. Mudlet now does not do that &lt;i&gt;unless&lt;/i&gt; this option is set, which thus only needs to be done for older mapper packages that have not been simplified to work only with untranslated normal exits of the form: &lt;tt&gt;n&lt;/tt&gt;, &lt;tt&gt;ne&lt;/tt&gt;, ...,&lt;tt&gt;in&lt;/tt&gt;, &lt;tt&gt;out&lt;/t&gt;.&lt;/p&gt;&lt;p&gt;&lt;i&gt;You probably will not need to set this unless advised otherwise.&lt;/i&gt;&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Translate normal exits in speedWalkDir table</string>
+            </property>
+           </widget>
+          </item>
           <item row="5" column="0">
            <widget class="QLabel" name="label_networkPacketTimeout">
             <property name="text">
@@ -4026,7 +4036,7 @@ you can use it but there could be issues with aligning columns of text</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="1">
+          <item row="5" column="1">
            <widget class="QDoubleSpinBox" name="doubleSpinBox_networkPacketTimeout">
             <property name="toolTip">
              <string>&lt;p&gt;&lt;i&gt;Go-Ahead&lt;/i&gt; (&lt;tt&gt;GA&lt;/tt&gt;) and &lt;i&gt;End-of-record&lt;/i&gt; (&lt;tt&gt;EOR&lt;/tt&gt;) signalling tells Mudlet when the game server is done sending text. On games that do not provide &lt;tt&gt;GA&lt;/tt&gt; or &lt;tt&gt;EOR&lt;/tt&gt;, this option controls how long Mudlet will wait for more text to arrive. Greater values will help reduce the risk that Mudlet will split a large piece of text (with unintended line-breaks in the middle) which can stop some triggers from working. Lesser values increases the risk of text getting broken up, but may make the game feel more responsive.&lt;/p&gt;&lt;p&gt;&lt;i&gt;The default value, which was what Mudlet used before this control was added, is 0.300 Seconds.&lt;/i&gt;&lt;/p&gt;</string>
@@ -4293,6 +4303,7 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>checkBox_debugShowAllCodepointProblems</tabstop>
   <tabstop>checkBox_expectCSpaceIdInColonLessMColorCode</tabstop>
   <tabstop>comboBox_store_passwords_in</tabstop>
+  <tabstop>checkBox_translateSpeedWalkDirTable</tabstop>
   <tabstop>timeEdit_timerDebugOutputMinimumInterval</tabstop>
   <tabstop>doubleSpinBox_networkPacketTimeout</tabstop>
  </tabstops>
