--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -111,6 +111,7 @@
     </property>
     <addaction name="dactionOptions"/>
     <addaction name="dactionMultiView"/>
+    <addaction name="dactionMuteMedia"/>
     <addaction name="dactionMuteAPI"/>
     <addaction name="dactionMuteMCMP"/>
     <addaction name="dactionMuteMSP"/>
@@ -315,6 +316,23 @@
    </property>
    <property name="toolTip">
     <string comment="Same text is used in 2 places.">&lt;p&gt;Splits the Mudlet screen to show multiple profiles at once; disabled when less than two are loaded.&lt;/p&gt;</string>
+   </property>
+  </action>
+  <action name="dactionMuteMedia">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Mute All Media</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;p&gt;Mutes all media played.&lt;/p&gt;</string>
    </property>
   </action>
   <action name="dactionMuteAPI">
