--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -111,11 +111,18 @@
     </property>
     <addaction name="dactionOptions"/>
     <addaction name="dactionMultiView"/>
+    <addaction name="separator"/>
+    <addaction name="menuMute"/>
+   </widget>
+   <widget class="QMenu" name="menuMute">
+    <property name="title">
+     <string>Mute media</string>
+    </property>
     <addaction name="dactionMuteMedia"/>
     <addaction name="dactionMuteAPI"/>
     <addaction name="dactionMuteMCMP"/>
     <addaction name="dactionMuteMSP"/>
-   </widget>
+    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
      <string>Help</string>
