--- a/src/ui/mapper.ui
+++ b/src/ui/mapper.ui
@@ -199,7 +199,7 @@
                </font>
               </property>
               <property name="text">
-               <string notr="true">⯇</string>
+               <string notr="true">←</string>
               </property>
               <property name="autoRepeat">
                <bool>true</bool>
@@ -233,7 +233,7 @@
                </size>
               </property>
               <property name="text">
-               <string notr="true">⯆</string>
+               <string notr="true">↓</string>
               </property>
               <property name="autoRepeat">
                <bool>true</bool>
@@ -267,7 +267,7 @@
                </size>
               </property>
               <property name="text">
-               <string notr="true">⯅</string>
+               <string notr="true">↑</string>
               </property>
               <property name="autoRepeat">
                <bool>true</bool>
@@ -301,7 +301,7 @@
                </size>
               </property>
               <property name="text">
-               <string notr="true">⯈</string>
+               <string notr="true">→</string>
               </property>
               <property name="autoRepeat">
                <bool>true</bool>
